--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <th>Name</th>
           <th>Email</th>
           <th>Password</th>
-          <th>DOB</th>
+          <th>Dob</th>
           <th>Accepted terms?</th>
         </tr>
       </thead>
